k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cicd
  labels:
    app.kubernetes.io/managed-by: kubectl
    project: cicd-platform
